2005-08-19  Philippe Gerum  <rpm@xenomai.org>

	* arch/ia64/hal/ia64.c, arch/ppc64/hal/ppc64.c
	(do_exception_event): Fix propagation code.

2005-08-18  Fillod Stephane <stephane.fillod@thomson.net>
	
	* nucleus/heap.c, nucleus/pipe.c: Use C99 initializers.

	* skins/compat/shm.c: Add shared memory support.

	* skins/compat/fifo.c: Pass read/write flag to fifo handlers.

2005-08-17  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_harden): Wait in TASK_INTERRUPTIBLE
	state instead of TASK_UNINTERRUPTIBLE, so that we don't mess with
	the runqueue's counter of uninterruptible tasks.
	(do_sigwake_event): Fix debug break state detection for
	LinuxThreads setups.

2005-08-17  Dmitry Adamushko  <dmitry.adamushko@datacon.at>
	
	* nucleus/pipe.c: Various cleanups.

2005-08-16  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c: Rework and simplify timer locking code.

	* arch/generic/hal/generic.c: Group spinlock debugging features.

2005-08-15  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add ltt-enabled r12 patch.

2005-08-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/sem.c (sem_open, sem_close, sem_unlink): Add support
	for named semaphores.

2005-08-13  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/pod.h (xnsched_cpu): Provide an efficient UP
	implementation.

	* nucleus/pod.c (xnpod_schedule): Add diagnostic for missing
	rescheduling bit when in debug mode.

	* nucleus/shadow.c: Get rid of xnshadow_ticks2t[sv] and
	xnshadow_t[sv]2ticks which are no longer in use.

	* include/nucleus/pod.h (xnpod_ns2ticks, xnpod_ticks2ns): Avoid
	useless operations when system only supports aperiodic timer.

2005-08-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/generic/hal/generic.c (xnlock_read_proc): Add spinlock
	locking duration statistics.

2005-08-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm: Merge RTDM patch level #8.
